variables.Variables.scala.error
Erreur de compilation :
Variables:8: error: '<-' expected but ')' found.
for(y>-0 to x){
             ^Variables:14: error: illegal start of simple expression
	}
        ^